--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 *~
 #*
+/modelos/this week is sad for me..stl
+/modelos/model_obj_3Q32HG4_MIk_3hCyBJjja2D.zip
+/modelos/this week is sad for me./
+/modelos/Volvagia the Lava Dragon.stl
+/modelos/model_obj_5CZOaMJqDN__8p-q7H52YG9.zip
+/modelos/this week is sad for me..zip
+/modelos/Volvagia the Lava Dragon.zip
